crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__wildcard_one_field.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
  1 ignored#4 -> 42
  2 ignored#5 ignored#6 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)
    (lam ignored_4 (con integer 42))
    (lam ignored_5 (lam ignored_6 (con integer 42)))))
--- optimized Core
let ignored#1 : int = trace "field" in 0 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam ignored_2 (con integer 42))
      (force [[builtin_3 (con string "field")] (delay (con integer 0))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
  1 ignored#4 -> 42
  2 ignored#5 ignored#6 -> 42
--- uplc before
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)
    (lam ignored_4 (con integer 42))
    (lam ignored_5 (lam ignored_6 (con integer 42)))))
--- core after
let ignored#4 : int = trace "field" in 0 in
42
--- uplc after
(program 1.1.0
  [(lam ignored_4 (con integer 42))
    (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))])])
--- result
(con integer 42)
--- logs
["field"]
